Bug 231265 - Konqueror crashes when image link clicked
Summary: Konqueror crashes when image link clicked
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: searchbarplugin (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Arend van Beelen jr.
URL:
Keywords:
: 258273 265927 268429 277438 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-19 01:25 UTC by Richard Johnson
Modified: 2011-11-17 23:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Johnson 2010-03-19 01:25:55 UTC
Application: konqueror (4.4.1 (KDE 4.4.1))
KDE Platform Version: 4.4.1 (KDE 4.4.1)
Qt Version: 4.6.2
Operating System: Linux 2.6.32.9-70.fc12.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
1. open konquerer
2. select several links in individual tabs
3. select "click to enlarge" on an image
4.  tool crashes

This occurs whether it's two tabs or five, whether other app's are using the network or not, whether other applications are running or not.

The crash can be reproduced every time.

 -- Backtrace:
Application: Konqueror (konqueror), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#5  0x00000038eee5c970 in vtable for QPropertyAnimation () from /usr/lib64/libQtCore.so.4
#6  0x00000038eeb5bab9 in QMetaObject::cast (this=0x38f30440a0, obj=0x47f4d60) at kernel/qmetaobject.cpp:266
#7  0x00007fe0af57d839 in qobject_cast<KParts::ReadWritePart*> (this=0x31bac20) at /usr/include/QtCore/qobject.h:455
#8  SearchBarPlugin::updateComboVisibility (this=0x31bac20) at /usr/src/debug/konq-plugins-4.4.0/searchbar/searchbar.cpp:486
#9  0x00007fe0af5835cc in SearchBarPlugin::qt_metacall (this=0x31bac20, _c=InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff41eb7460)
    at /usr/src/debug/konq-plugins-4.4.0/x86_64-redhat-linux-gnu/searchbar/searchbar.moc:194
#10 0x00000038eeb6a2af in QMetaObject::activate (sender=0x183c580, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#11 0x00000038eeb6f97f in QSingleShotTimer::timerEvent (this=0x183c580) at kernel/qtimer.cpp:308
#12 0x00000038eeb6663e in QObject::event (this=0x183c580, e=0x7fff41eb7bc0) at kernel/qobject.cpp:1212
#13 0x00000038f79aa9dc in QApplicationPrivate::notify_helper (this=0xc0d7d0, receiver=0x183c580, e=0x7fff41eb7bc0) at kernel/qapplication.cpp:4300
#14 0x00000038f79b0aab in QApplication::notify (this=<value optimized out>, receiver=0x183c580, e=0x7fff41eb7bc0) at kernel/qapplication.cpp:4183
#15 0x00000038f0206846 in KApplication::notify (this=0x7fff41eb8070, receiver=0x183c580, event=0x7fff41eb7bc0) at /usr/src/debug/kdelibs-4.4.1/kdeui/kernel/kapplication.cpp:302
#16 0x00000038eeb5774c in QCoreApplication::notifyInternal (this=0x7fff41eb8070, receiver=0x183c580, event=0x7fff41eb7bc0) at kernel/qcoreapplication.cpp:704
#17 0x00000038eeb7fe02 in sendEvent (this=0xc11450) at kernel/qcoreapplication.h:215
#18 QTimerInfoList::activateTimers (this=0xc11450) at kernel/qeventdispatcher_unix.cpp:603
#19 0x00000038eeb7d374 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#20 0x00007fe0c6bab23e in g_main_dispatch (context=0xc101f0) at gmain.c:1960
#21 IA__g_main_context_dispatch (context=0xc101f0) at gmain.c:2513
#22 0x00007fe0c6baec28 in g_main_context_iterate (context=0xc101f0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:2591
#23 0x00007fe0c6baed4a in IA__g_main_context_iteration (context=0xc101f0, may_block=1) at gmain.c:2654
#24 0x00000038eeb7d063 in QEventDispatcherGlib::processEvents (this=0xbf1c70, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#25 0x00000038f7a49a4e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#26 0x00000038eeb56192 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#27 0x00000038eeb5645c in QEventLoop::exec (this=0x7fff41eb7e60, flags=...) at kernel/qeventloop.cpp:201
#28 0x00000038eeb58749 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#29 0x00000038f36b3cab in kdemain (argc=-208790104, argv=0x1) at /usr/src/debug/kdebase-4.4.1/apps/konqueror/src/konqmain.cpp:257
#30 0x00000038e2e1eb1d in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, 
    rtld_fini=<value optimized out>, stack_end=<value optimized out>) at libc-start.c:226
#31 0x0000000000400759 in _start ()

Reported using DrKonqi
Comment 1 Dario Andres 2010-03-19 13:53:29 UTC
Just to check: does this happen if you disable the SearchBar plugin ?
Regards
Comment 2 Frank Reininghaus 2011-03-14 21:34:08 UTC
*** Bug 265927 has been marked as a duplicate of this bug. ***
Comment 3 Frank Reininghaus 2011-03-14 21:35:31 UTC
*** Bug 268429 has been marked as a duplicate of this bug. ***
Comment 4 Frank Reininghaus 2011-03-14 21:36:49 UTC
The reporter of bug 268429 (reported for KDE 4.6.1) says that closing Konqueror causes the crash for him.
Comment 5 Frank Reininghaus 2011-07-10 10:36:25 UTC
*** Bug 277438 has been marked as a duplicate of this bug. ***
Comment 6 Dawit Alemayehu 2011-11-17 23:07:50 UTC
*** Bug 258273 has been marked as a duplicate of this bug. ***
Comment 7 Dawit Alemayehu 2011-11-17 23:22:04 UTC
Git commit 8c33c21e3382febf8a04713c7f6f975bb74cd8a3 by Dawit Alemayehu.
Committed on 18/11/2011 at 00:00.
Pushed by adawit into branch 'KDE/4.7'.

Avoid potential crashes by using a QWeakPointer to store the reference to the
broweser KPart.

BUG: 231265
FIXED-IN: 4.7.4

M  +14   -12   konq-plugins/searchbar/searchbar.cpp
M  +1    -1    konq-plugins/searchbar/searchbar.h

http://commits.kde.org/kde-baseapps/8c33c21e3382febf8a04713c7f6f975bb74cd8a3
Comment 8 Dawit Alemayehu 2011-11-17 23:23:58 UTC
Git commit e23ad9547a0c98ac2fcd6fe38f7639ea55ff8536 by Dawit Alemayehu.
Committed on 18/11/2011 at 00:00.
Pushed by adawit into branch 'master'.

Avoid potential crashes by using a QWeakPointer to store the reference to the
broweser KPart.

BUG: 231265
FIXED-IN: 4.7.4

(cherry picked from commit 8c33c21e3382febf8a04713c7f6f975bb74cd8a3)

M  +14   -12   konq-plugins/searchbar/searchbar.cpp
M  +1    -1    konq-plugins/searchbar/searchbar.h

http://commits.kde.org/kde-baseapps/e23ad9547a0c98ac2fcd6fe38f7639ea55ff8536