Avoid potential crashes by using a QWeakPointer to store the reference to the broweser KPart.

BUG: 231265
FIXED-IN: 4.7.4